--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.1",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
